Division de pagina

--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
     <title>Portafolio Ilustraciones</title>
 </head>
 <body>
-    pagina
+    <header> En esta parte va el encabezado 
+
+        <p>Se pide (Logo, Banner)</p>
+        1.Inserta Logo.
+        2.-Inserta Banner y elementos del banner
+        3. Inserta menú de Navegación
+
+    </header>
+
+    <section>Cuerpo1
+        <p>se pide que aqui vayan los Servicios</p>
+        Inserta  3 columnas, Inserta titulos, imagen párrafos y botón.
+    </section>
+
+    <section>cuerpo2
+        <p>se pide que aqui vaya el Proyecto</p>
+        Inserta  4 columnas, Inserta  títulos, párrafos  e Imágenes.
+
+    </section>
+
+    <footer>Aqui va el pie de pagina
+        <p>Redes sociales, contacto y direcciones</p>
+    </footer>
 </body>
 </html>
