--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">    
+    <link rel="shortcut icon" type= "image/png" href=""/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio Ilustraciones</title>
 </head>
 <body>
-    <!---->
+    <!-- Esta parte es de Nicolas-->
     <header> En esta parte va el encabezado 
 
         <p>Se pide (Logo,Banner)</p>
@@ -22,7 +23,9 @@
         <p>cambios nico</p>
         Inserta  3 columnas, Inserta titulos, imagen párrafos y botón.
     </section>
+<!--Hasta acá es la parte de Nicolas-->
 
+<!--Desde Aqui Es la parte de Daniel-->
     <section>cuerpo2
         <p>se pide que aqui vaya el Proyecto</p>
         Inserta  4 columnas, Inserta  títulos, párrafos  e Imágenes.
