--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">    
-    <link rel="shortcut icon" type= "image/png" href=""/>
+    <link rel="shortcut icon" type= "image/png" href="img/Icono.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio Ilustraciones</title>
 </head>
