--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">    
     <link rel="shortcut icon" type= "image/png" href="img/Icono.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos.css">
     <title>Portafolio Ilustraciones</title>
 </head>
 <body>
@@ -26,9 +27,27 @@
 <!--Hasta acá es la parte de Nicolas-->
 
 <!--Desde Aqui Es la parte de Daniel-->
-    <section>cuerpo2
-        <p>se pide que aqui vaya el Proyecto</p>
-        Inserta  4 columnas, Inserta  títulos, párrafos  e Imágenes.
+<!--se pide que aqui vaya el Proyecto
+        Inserta  4 columnas, Inserta  títulos, párrafos  e Imágenes-->
+    <section class="proyecto">
+        <div class="elemento elemento1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+            Eligendi laudantium esse, voluptate architecto vitae nobis adipisci provident cumque, 
+            fuga exercitationem omnis facilis 
+            molestias ipsam placeat. Deserunt harum aliquam consectetur perferendis!
+             </div>
+        <div class="elemento elemento 2">Lorem ipsum dolor sit amet consectetur,
+            adipisicing elit. At distinctio enim illo voluptatibus, 
+            optio molestiae? Sed voluptatum commodi tempore dignissimos.
+        </div>
+        <div class="elemento elemento 3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+            Illo maxime eligendi ducimus assumenda consequatur magni eius dolor aut id sed!
+        </div>
+        <div class="elemento elemento 4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+            Molestiae eos, magni deserunt nobis architecto corrupti,
+             ab praesentium modi beatae provident iure earum inventore pariatur?
+            </div>
+           
+        
 
     </section>
 
