--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 Lorem ipsum dolor sit amet consectetur,
                 adipisicing elit. At distinctio enim illo voluptatibus, 
                 optio molestiae? Sed voluptatum commodi tempore dignissimos.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus, ad animi quam necessitatibus quo rerum repudiandae quae magnam sequi debitis illum consectetur temporibus nihil ducimus architecto tempora natus fugiat magni.
             </div>
     
         </section>
